<resources>
    <string name="app_name">Court Counter</string>
    <string name="choose_team">Choose Teams</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="team3">Team 3</string>
    <string name="team4">Team 4</string>
    <string name="team5">Team 5</string>

    <string name="action_scores_main">Scores</string>
    <string name="action_scores_teams">Scores</string>
    <string name="action_refresh_teams">Refresh</string>
    <string name="action_save_teams">Save score</string>
    <string name="error_message">Could not load data!</string>

</resources>
