<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_team"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_margin="24dp"
        />
    <Button
        android:id="@+id/tv_team1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team1"
        android:layout_margin="16dp"/>
    <Button
        android:id="@+id/tv_team2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team2"
        android:layout_margin="16dp"/>
    <Button
        android:id="@+id/tv_team3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team3"
        android:layout_margin="16dp"/>
    <Button
        android:id="@+id/tv_team4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team4"
        android:layout_margin="16dp"/>
    <Button
        android:id="@+id/tv_team5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team5"
        android:layout_margin="16dp"/>
</LinearLayout>

